# vectordb-migrator

./: .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
docker/pgvector_init/: init.sql
docker/qwen3_embedder/: Dockerfile  app.py  requirements.txt
docker/qwen3_processor/: Dockerfile  requirements.txt
examples/: add_source_tracking.py  pgvector_to_milvus_docker_config.json  pgvector_to_pinecone_config.json  pgvector_to_qdrant_config.json  pinecone_to_pgvector_config.json  pinecone_to_qdrant_config.json  qdrant_to_pgvector_config.json  qwen3_process_and_migrate.py  run_embedding_migration_demo.py
tests/: test_adapters.py  test_cli.py  test_core.py  test_milvus_adapter.py  test_package.py  test_pgvector_adapter.py  test_pinecone_adapter.py  test_qdrant_adapter.py
vectordb_migration/: __init__.py  __main__.py
vectordb_migration/adapters/: __init__.py  milvus.py  pgvector.py  qdrant.py
vectordb_migration/cli/: __init__.py  migrate.py
vectordb_migration/core/: __init__.py  adapter.py  migrator.py
